--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "12.16.2"
+  },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "npm": "6.14.4"
   },
   "browserslist": {
     "production": [
