--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-transition-group": "1.x"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
