--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-select-search": "^1.0.2",
-    "react-transition-group": "1.x"
+    "react-transition-group": "1.x",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "node server.js",
