--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router": "3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-select-search": "^1.0.2",
@@ -30,7 +31,7 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": "12.16.2"
+    "node": "13.8.0"
   },
   "eslintConfig": {
     "extends": "react-app",
