--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/react-transition-group": "^4.2.4",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "express-favicon": "^2.0.1",
     "react": "^16.13.1",
+    "react-async": "^10.0.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -31,7 +33,7 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": "13.8.0"
+    "node": "12.16.2"
   },
   "eslintConfig": {
     "extends": "react-app",
